main.css
.main-container {
	padding: 2em;
}

.header-div {
	display: inline;
	letter-spacing: .5em;
}

.profilePic	{
	width: 200px;
	float: center;
}

h1 {
	color: white;
}

body {
	background-image: url(https://wallpapers.wallhaven.cc/wallpapers/full/wallhaven-460346.jpg);
	}

h3	{
	letter-spacing: .5em;
	text-align: center;
}

p {
	text-indent: 2em;
	line-height: 2em;
	text-align: justify;
	font-family: "Trebuchet MS";
	font-size: large;
	padding-top: 2em;
	color: white;
}

